# financeopenenv

./: Dockerfile  pyproject.toml
app/: env.py
